UI and UX updates
graphical improvements, disabled insert after winning

--- a/index.html
+++ b/index.html
@@ -19,34 +19,13 @@
 				<thead></thead>
 				<tbody>
 					<tr>
-						<td>
-							<button onclick="insert(0)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(1)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(2)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(3)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(4)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(5)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
-						<td>
-							<button onclick="insert(6)">place your chip here!</button>
-							<div class="arrow-down"></div>
-						</td>
+						<td class="insert" onclick="insert(0)"></td>
+						<td class="insert" onclick="insert(1)"></td>
+						<td class="insert" onclick="insert(2)"></td>
+						<td class="insert" onclick="insert(3)"></td>
+						<td class="insert" onclick="insert(4)"></td>
+						<td class="insert" onclick="insert(5)"></td>
+						<td class="insert" onclick="insert(6)"></td>
 					</tr>
 				</tbody>
 			</table>
@@ -54,58 +33,58 @@
 				<thead></thead>
 				<tbody>
 					<tr>
-						<td id="slot0_row0"></td>
-						<td id="slot1_row0"></td>
-						<td id="slot2_row0"></td>
-						<td id="slot3_row0"></td>
-						<td id="slot4_row0"></td>
-						<td id="slot5_row0"></td>
-						<td id="slot6_row0"></td>
+						<td id="slot0_row0"><div class="white chip"></div></td>
+						<td id="slot1_row0"><div class="white chip"></div></td>
+						<td id="slot2_row0"><div class="white chip"></div></td>
+						<td id="slot3_row0"><div class="white chip"></div></td>
+						<td id="slot4_row0"><div class="white chip"></div></td>
+						<td id="slot5_row0"><div class="white chip"></div></td>
+						<td id="slot6_row0"><div class="white chip"></div></td>
 					</tr>
 					<tr>
-						<td id="slot0_row1"></td>
-						<td id="slot1_row1"></td>
-						<td id="slot2_row1"></td>
-						<td id="slot3_row1"></td>
-						<td id="slot4_row1"></td>
-						<td id="slot5_row1"></td>
-						<td id="slot6_row1"></td>
+						<td id="slot0_row1"><div class="white chip"></div></td>
+						<td id="slot1_row1"><div class="white chip"></div></td>
+						<td id="slot2_row1"><div class="white chip"></div></td>
+						<td id="slot3_row1"><div class="white chip"></div></td>
+						<td id="slot4_row1"><div class="white chip"></div></td>
+						<td id="slot5_row1"><div class="white chip"></div></td>
+						<td id="slot6_row1"><div class="white chip"></div></td>
 					</tr>
 					<tr>
-						<td id="slot0_row2"></td>
-						<td id="slot1_row2"></td>
-						<td id="slot2_row2"></td>
-						<td id="slot3_row2"></td>
-						<td id="slot4_row2"></td>
-						<td id="slot5_row2"></td>
-						<td id="slot6_row2"></td>
+						<td id="slot0_row2"><div class="white chip"></div></td>
+						<td id="slot1_row2"><div class="white chip"></div></td>
+						<td id="slot2_row2"><div class="white chip"></div></td>
+						<td id="slot3_row2"><div class="white chip"></div></td>
+						<td id="slot4_row2"><div class="white chip"></div></td>
+						<td id="slot5_row2"><div class="white chip"></div></td>
+						<td id="slot6_row2"><div class="white chip"></div></td>
 					</tr>
 					<tr>
-						<td id="slot0_row3"></td>
-						<td id="slot1_row3"></td>
-						<td id="slot2_row3"></td>
-						<td id="slot3_row3"></td>
-						<td id="slot4_row3"></td>
-						<td id="slot5_row3"></td>
-						<td id="slot6_row3"></td>
+						<td id="slot0_row3"><div class="white chip"></div></td>
+						<td id="slot1_row3"><div class="white chip"></div></td>
+						<td id="slot2_row3"><div class="white chip"></div></td>
+						<td id="slot3_row3"><div class="white chip"></div></td>
+						<td id="slot4_row3"><div class="white chip"></div></td>
+						<td id="slot5_row3"><div class="white chip"></div></td>
+						<td id="slot6_row3"><div class="white chip"></div></td>
 					</tr>
 					<tr>
-						<td id="slot0_row4"></td>
-						<td id="slot1_row4"></td>
-						<td id="slot2_row4"></td>
-						<td id="slot3_row4"></td>
-						<td id="slot4_row4"></td>
-						<td id="slot5_row4"></td>
-						<td id="slot6_row4"></td>
+						<td id="slot0_row4"><div class="white chip"></div></td>
+						<td id="slot1_row4"><div class="white chip"></div></td>
+						<td id="slot2_row4"><div class="white chip"></div></td>
+						<td id="slot3_row4"><div class="white chip"></div></td>
+						<td id="slot4_row4"><div class="white chip"></div></td>
+						<td id="slot5_row4"><div class="white chip"></div></td>
+						<td id="slot6_row4"><div class="white chip"></div></td>
 					</tr>
 					<tr>
-						<td id="slot0_row5"></td>
-						<td id="slot1_row5"></td>
-						<td id="slot2_row5"></td>
-						<td id="slot3_row5"></td>
-						<td id="slot4_row5"></td>
-						<td id="slot5_row5"></td>
-						<td id="slot6_row5"></td>
+						<td id="slot0_row5"><div class="white chip"></div></td>
+						<td id="slot1_row5"><div class="white chip"></div></td>
+						<td id="slot2_row5"><div class="white chip"></div></td>
+						<td id="slot3_row5"><div class="white chip"></div></td>
+						<td id="slot4_row5"><div class="white chip"></div></td>
+						<td id="slot5_row5"><div class="white chip"></div></td>
+						<td id="slot6_row5"><div class="white chip"></div></td>
 					</tr>
 				</tbody>
 			</table>
@@ -134,6 +113,8 @@
 		var players = ["R", "B"]; 
  		var current_player = players[0];
  		var turn = 1;
+ 		var select_all = document.querySelector("*"); 
+		select_all.style.cursor = "url(images/red_chip.png) 16 16, auto";
 
  		function reset(){
  			slot_0 = ['','','','','','']; 
@@ -148,9 +129,14 @@
 			players = ["R", "B"]; 
 	 		current_player = players[0];
 	 		turn = 1;
+	 		select_all.style.cursor = "url(images/red_chip.png) 16 16, auto";
 	 		document.getElementById('message').innerHTML = "";
 	 		document.getElementById('turn').innerHTML = "Turn "+turn+"<br><br><div class='red chip'></div>";
-	 		document.getElementById('slots').innerHTML = "<tbody><tr><td id='slot0_row0'></td><td id='slot1_row0'></td><td id='slot2_row0'></td><td id='slot3_row0'></td><td id='slot4_row0'></td><td id='slot5_row0'></td><td id='slot6_row0'></td></tr><tr><td id='slot0_row1'></td><td id='slot1_row1'></td><td id='slot2_row1'></td><td id='slot3_row1'></td><td id='slot4_row1'></td><td id='slot5_row1'></td><td id='slot6_row1'></td></tr><tr><td id='slot0_row2'></td><td id='slot1_row2'></td><td id='slot2_row2'></td><td id='slot3_row2'></td><td id='slot4_row2'></td><td id='slot5_row2'></td><td id='slot6_row2'></td></tr><tr><td id='slot0_row3'></td><td id='slot1_row3'></td><td id='slot2_row3'></td><td id='slot3_row3'></td><td id='slot4_row3'></td><td id='slot5_row3'></td><td id='slot6_row3'></td></tr><tr><td id='slot0_row4'></td><td id='slot1_row4'></td><td id='slot2_row4'></td><td id='slot3_row4'></td><td id='slot4_row4'></td><td id='slot5_row4'></td><td id='slot6_row4'></td></tr><tr><td id='slot0_row5'></td><td id='slot1_row5'></td><td id='slot2_row5'></td><td id='slot3_row5'></td><td id='slot4_row5'></td><td id='slot5_row5'></td><td id='slot6_row5'></td></tr></tbody>";
+	 		document.getElementById('slots').innerHTML = "<tbody><tr><td id='slot0_row0'><div class='white chip'></div></td><td id='slot1_row0'><div class='white chip'></div></td><td id='slot2_row0'><div class='white chip'></div></td><td id='slot3_row0'><div class='white chip'></div></td><td id='slot4_row0'><div class='white chip'></div></td><td id='slot5_row0'><div class='white chip'></div></td><td id='slot6_row0'><div class='white chip'></div></td></tr><tr><td id='slot0_row1'><div class='white chip'></div></td><td id='slot1_row1'><div class='white chip'></div></td><td id='slot2_row1'><div class='white chip'></div></td><td id='slot3_row1'><div class='white chip'></div></td><td id='slot4_row1'><div class='white chip'></div></td><td id='slot5_row1'><div class='white chip'></div></td><td id='slot6_row1'><div class='white chip'></div></td></tr><tr><td id='slot0_row2'><div class='white chip'></div></td><td id='slot1_row2'><div class='white chip'></div></td><td id='slot2_row2'><div class='white chip'></div></td><td id='slot3_row2'><div class='white chip'></div></td><td id='slot4_row2'><div class='white chip'></div></td><td id='slot5_row2'><div class='white chip'></div></td><td id='slot6_row2'><div class='white chip'></div></td></tr><tr><td id='slot0_row3'><div class='white chip'></div></td><td id='slot1_row3'><div class='white chip'></div></td><td id='slot2_row3'><div class='white chip'></div></td><td id='slot3_row3'><div class='white chip'></div></td><td id='slot4_row3'><div class='white chip'></div></td><td id='slot5_row3'><div class='white chip'></div></td><td id='slot6_row3'><div class='white chip'></div></td></tr><tr><td id='slot0_row4'><div class='white chip'></div></td><td id='slot1_row4'><div class='white chip'></div></td><td id='slot2_row4'><div class='white chip'></div></td><td id='slot3_row4'><div class='white chip'></div></td><td id='slot4_row4'><div class='white chip'></div></td><td id='slot5_row4'><div class='white chip'></div></td><td id='slot6_row4'><div class='white chip'></div></td></tr><tr><td id='slot0_row5'><div class='white chip'></div></td><td id='slot1_row5'><div class='white chip'></div></td><td id='slot2_row5'><div class='white chip'></div></td><td id='slot3_row5'><div class='white chip'></div></td><td id='slot4_row5'><div class='white chip'></div></td><td id='slot5_row5'><div class='white chip'></div></td><td id='slot6_row5'><div class='white chip'></div></td></tr></tbody>";
+	 		var buttons = document.getElementsByClassName('insert'); 
+	 		for(var button = 0; button < buttons.length; button++){
+	 			buttons[button].style.pointerEvents = 'auto';
+	 		}
  		}
  
 		function insert (slot_number) { 
@@ -160,11 +146,12 @@
 					var location = "slot" + slot_number + "_row" + row_number;  
 
 					display_chip(current_player, location);
-					if(check_win_condition(current_player)){
-						wins(current_player); 
-					}else{
-						next(current_player);
-					}    
+					if(turn > 6){
+						if(check_win_condition(current_player)){
+							wins(current_player); 
+						}
+					} 
+					next(current_player);   
 					break;
 				}
 			}  
@@ -237,10 +224,12 @@
 			if(player == 'R'){
 				current_player = players[1]; 
 				document.getElementById('turn').innerHTML = "Turn "+turn+"<br><br><div class='black chip'></div>";
+				select_all.style.cursor = "url(images/black_chip.png) 16 16, auto";
 			}
 			else if(player == 'B'){
 				current_player = players[0];  
 				document.getElementById('turn').innerHTML = "Turn "+turn+"<br><br><div class='red chip'></div>";
+				select_all.style.cursor = "url(images/red_chip.png) 16 16, auto";
 			} 
 			if(turn > 42){ 
 				document.getElementById('turn').innerHTML = "Out Of Chips";
@@ -250,11 +239,16 @@
 
 		function wins(player){
 			if(player == 'R'){ 
-				document.getElementById('message').innerHTML = "RED WINS!!<br><button onclick='reset()'>reset</button>" ; 
+				document.getElementById('message').innerHTML = "RED WINS!!<br><button onclick='reset()'>reset</button>";  
 			}
 			else if(player == 'B'){
-				document.getElementById('message').innerHTML = "BLACK WINS!!<br><button onclick='reset()'>reset</button>" ;			
+				document.getElementById('message').innerHTML = "BLACK WINS!!<br><button onclick='reset()'>reset</button>"; 
 			}  
+			var buttons = document.getElementsByClassName('insert'); 
+			console.log(buttons);
+	 		for(var button = 0; button < buttons.length; button++){
+	 			buttons[button].style.pointerEvents = 'none';
+	 		} 
 		} 
 	</script>
 </body>
